--- a/storage/app/public/.gitignore
+++ b/storage/app/public/.gitignore
@@ -1,7 +1,7 @@
-*
-!images
-!ktm
-!ktp
-!pasFoto
-!surat_pernyataan_iisma
-!.gitignore
+# *
+# !images
+# !ktm
+# !ktp
+# !pasFoto
+# !surat_pernyataan_iisma
+# !.gitignore
