--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "1.0",
-        "realrashid/sweet-alert": "^7.1"
+        "realrashid/sweet-alert": "^7.1",
+        "tonysm/rich-text-laravel": "^3.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
