--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "devDependencies": {
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
+        "trix": "^2.0.10",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.14.9"
     }
 }
